styles/ceteicean.css
tei-ab { 
  display:block;
}
tei-back { 
  display:block;
 }
tei-body { 
  display: block;
 }
tei-caption { display: block; }
tei-castitem { 
  display: list-item;
 }
tei-castlist { 
  display: block;
 }
tei-code { 
  font-family: monospace;
  font-size: larger;
  white-space:pre;
}
tei-colophon { 
  display: block;
 }
tei-dateline { 
  display: block;
 }
tei-del { 
  text-decoration: line-through;
 }
tei-div, tei-div1, tei-div2, tei-div3, tei-div4, tei-div5, tei-div6, tei-div7, tei-divgen { 
  display:block;
  margin:1em;
}
teieg-egxml { 
  display: block;
  margin-block-start: 1em; 
  margin-block-end: 1em; 
  font-family: monospace; 
  white-space: pre;
}
tei-emph { 
  font-style: italic;
}
tei-figure { 
  display: block;
}
tei-floatingtext { 
  display: block;
}
tei-head { 
  display: block;
}
tei-hi[rend~="bold"] { 
  font-weight: bold;
}
tei-hi[rend~="italic"] { 
  font-style: italic;
}
tei-hi[rend~="underline"] { 
  text-decoration: underline;
}
tei-item { 
  display:list-item;
  text-align: match-parent;
}
tei-l { 
  display:block;
}
tei-lg { 
  display:block;
}
tei-list {
  display: block;
  margin-block-start: 1em; 
  margin-block-end: 1em; 
  padding-inline-start: 40px;
}
tei-list[rend="numbered"] { 
  list-style-type: decimal;
}
tei-list[rend="bulleted"] { 
  list-style-type: disc;
}
tei-listannotation {
  display: block;
}
tei-listapp {
  display: block;
}
tei-listapp > tei-app {
  display: list-item;
}
tei-listbibl {
  display: block;
}
tei-listbibl > tei-bibl {
  display: list-item;
}
tei-listchange {
  display: block;
}
tei-listevent {
  display: block;
}
tei-listnym {
  display: block;
}
tei-listobject {
  display: block;
}
tei-listorg {
  display: block;
}
tei-listperson {
  display: block;
}
tei-listplace {
  display: block;
}
tei-listref {
  display: block;
}
tei-listwit {
  display: block;
}
tei-p { 
  display: block;
}
tei-rdg { 
  display: none;
}
tei-row { 
  display: table-row; 
  border-color: inherit;
  vertical-align: inherit;
}
tei-standoff { 
  display: none; 
}
tei-teiheader { 
  display: none;
}
tei-xenodata { 
  display: none;
}

